--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prepare": "husky",
     "lint": "eslint src",
     "format": "prettier --write \"src/**/*.{js,md,css,sass,scss,yml,json}\"",
+    "format:check": "prettier --check \"src/**/*.{js,ts,json,css,scss,md}\"",
     "cover": "jest --coverage",
     "clean": "rimraf dist"
   },
