--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,40 +1,71 @@
-name: Node.js CI
+name: Build, Test and Publish
 
 on:
   push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+    branches:
+      - main
+    tags:
+      - '/^v[0-9]+.*$' # Trigger release when pushing tags like v1.0.0
 
 jobs:
-  build:
+  build-and-test:
+    name: Lint, Test, and Build
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [18.x]
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: '18'
           cache: 'yarn'
 
       - name: Install dependencies
         run: yarn install
 
-      - name: Lint code
+      - name: Lint
         run: yarn lint
 
-      - name: Format checkout
-        run: yarn format:check
+      - name: Test
+        run: yarn test
 
-      - name: Run Tests
-        run: yarn test --ci --coverage
-
-      - name: Build project
+      - name: Build
         run: yarn build
+
+      - name: Upload build artifacts (dist/)
+        uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: dist/
+
+publish:
+  name: Publish to npm
+  needs: build-and-test
+  runs-on: ubuntu-latest
+  if: startwith(github.ref, 'refs/tags/v') # only on version tags
+
+  steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+        registry-url: 'https://registry.npmjs.org/'
+
+    - name: Install dependencies
+      run: yarn install --ignore-scripts
+
+    - name: Download build artifacts (dist/)
+      uses: actions/download-artifact@v4
+      with:
+        name: dist
+        path: dist/
+
+    - name: Publish to npm
+      run: npm publish
+      env:
+        NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
