--- a/.github/workflows/trigger-gitlab.yml
+++ b/.github/workflows/trigger-gitlab.yml
@@ -8,10 +8,15 @@ on:
 jobs:
   trigger:
     runs-on: ubuntu-latest
+    env:
+      GITLAB_TRIGGER_TOKEN: ${{  secrets.GITLAB_TRIGGER_TOKEN  }}
+
     steps:
       - name: Trigger GitLab Pipeline
         run: |
+          echo "Triggering Gitlab pipeline..."
+          echo "Token (first 4 chars): $(GITLAB_TRIGGER_TOKEN:0:4)" # debug optional
           curl -X POST \
-            -F token=${{ secrets.GITLAB_TRIGGER_TOKEN }} \
+            -F token=$GITLAB_TRIGGER_TOKEN \
             -F ref=gitlabci \
             https://gitlab.com/api/v4/projects/72053714/trigger/pipeline
