--- a/.github/workflows/trigger-gitlab.yml
+++ b/.github/workflows/trigger-gitlab.yml
@@ -12,11 +12,10 @@ jobs:
     steps:
       - name: Trigger GitLab Pipeline
         env:
-          GITLAB_TRIGGER_TOKEN: ${{  secrets.GITLAB_TRIGGER_TOKEN  }}
+          GITLAB_TRIGGER_TOKEN: ${{  secrets  }}
         run: |
           echo "Triggering Gitlab pipeline..."
-          echo "Token (first 4 chars):$GITLAB_TRIGGER_TOKEN ${{  secrets.GITLAB_TRIGGER_TOKEN  }}" # debug optional
-          curl -X POST \
-            -F token=glptt-a7e828a89257cdf81a1686c60cafd9c27a23548d \
-            -F ref=gitlabci \
-            https://gitlab.com/api/v4/projects/72053714/trigger/pipeline
+          echo "Token (first 4 chars):$GITLAB_TRIGGER_TOKEN ${{  secrets  }}" # debug optional
+          curl -X POST https://gitlab.com/api/v4/projects/72053714/trigger/pipeline \
+            -H "Content-Type: application/json" \
+            -d {"token": "glptt-a7e828a89257cdf81a1686c60cafd9c27a23548d", "ref": "gitlabci"} \
