--- a/.github/workflows/trigger-gitlab.yml
+++ b/.github/workflows/trigger-gitlab.yml
@@ -16,6 +16,6 @@ jobs:
         run: |
           echo "Triggering Gitlab pipeline..."
           echo "Token (first 4 chars):$GITLAB_TRIGGER_TOKEN ${{  secrets  }}" # debug optional
-          curl -X POST https://gitlab.com/api/v4/projects/72053714/trigger/pipeline \
+          curl -X POST "https://gitlab.com/api/v4/projects/72053714/trigger/pipeline" \
             -H "Content-Type: application/json" \
-            -d {"token": "glptt-a7e828a89257cdf81a1686c60cafd9c27a23548d", "ref": "gitlabci"} \
+            -d "{\"token\": \"${GITLAB_TRIGGER_TOKEN}\", \"ref\": \"gitlabci\"}"
