debugging using if statement added secrets.GITLAB_TRIGGER_TOKEN  .github/workflows/trigger-gitlab.yml

--- a/.github/workflows/trigger-gitlab.yml
+++ b/.github/workflows/trigger-gitlab.yml
@@ -10,12 +10,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Trigger GitLab Pipeline
+      - name: Debug secret
         env:
-          GITLAB_TRIGGER_TOKEN: ${{  secrets  }}
+          GITLAB_TRIGGER_TOKEN: ${{  secrets.GITLAB_TRIGGER_TOKEN  }}
+        run: |
+          if [ -z "${{ secrets.GITLAB_TRIGGER_TOKEN }}" ]; then
+            echo " Secret missing"
+            exit 1
+          else
+            echo " Secret exists"
+          fi
+
+      - name: Trigger GitLab Pipeline
         run: |
           echo "Triggering Gitlab pipeline..."
-          echo "Token (first 4 chars):$GITLAB_TRIGGER_TOKEN ${{  secrets  }}" # debug optional
+          echo "Token (first 4 chars):$GITLAB_TRIGGER_TOKEN ${{  secrets.GITLAB_TRIGGER_TOKEN  }}" # debug optional
           curl -X POST "https://gitlab.com/api/v4/projects/72053714/trigger/pipeline" \
             -H "Content-Type: application/json" \
             -d "{\"token\": \"${GITLAB_TRIGGER_TOKEN}\", \"ref\": \"gitlabci\"}"
