--- a/.github/workflows/trigger-gitlab.yml
+++ b/.github/workflows/trigger-gitlab.yml
@@ -14,7 +14,7 @@ jobs:
         env:
           GITLAB_TRIGGER_TOKEN: ${{  secrets.GITLAB_TRIGGER_TOKEN  }}
         run: |
-          if [ -z "${{ secrets.GITLAB_TRIGGER_TOKEN }}" ]; then
+          if [ -z "$GITLAB_TRIGGER_TOKEN" ]; then
             echo " Secret missing"
             exit 1
           else
