--- a/.github/workflows/trigger-gitlab.yml
+++ b/.github/workflows/trigger-gitlab.yml
@@ -15,7 +15,8 @@ jobs:
           GITLAB_TRIGGER_TOKEN: ${{  secrets.GITLAB_TRIGGER_TOKEN  }}
           GITLAB_PAT: ${{ secrets.GITLAB_PAT}}
         run: |
-          curl -X POST "https://gitlab.com/api/v4/projects/72053714/trigger/pipeline" \
-            -H "PRIVATE-TOKEN: $GITLAB_PAT" \
+          echo $GITLAB_PAT gitlab PAT token
+          curl -X POST "https://gitlab.com/api/v4/projects/72053714/pipeline" \
+            -H "PRIVATE-TOKEN: ${{ secrets.GITLAB_PAT }}" \
             -H "Content-Type: application/json" \
-            -d "{ \"ref\": \"gitlabci\"}"
+            -d '{"ref":"gitlabci"}'
