added corepack related function to enable yarn as gitlab build couldn't find yarn to run scripts

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,8 @@ cache:
 
 default:
   before_script:
+    - corepack enable
+    - corepack prepare yarn@stable --activate
     - yarn install
 
 stages:
