--- a/.github/workflows/gitlab-trigger-and-sync.yml
+++ b/.github/workflows/gitlab-trigger-and-sync.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout Github repo
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0 # clone full history, avoids shallow push rejection
 
       - name: Push to Gitlab and Trigger GitLab Pipeline
         run: bash ./ci-scripts/gitlab-sync-and-trigger.sh
