fixed '' at the end of --data command

--- a/.github/workflows/circleci-trigger.yml
+++ b/.github/workflows/circleci-trigger.yml
@@ -16,4 +16,4 @@ jobs:
           curl -X POST https://circleci.com/api/v2/project/gh/arsalanshaikh13/Parallax-Provider-Tutorial/pipeline \
           --header 'Circle-Token: $CIRCLE_TOKEN' \
           --header 'Content-Type: application/json' \
-          --data '{"branch": "circleci"}''
+          --data '{"branch": "circleci"}'
