--- a/.github/workflows/circleci-trigger.yml
+++ b/.github/workflows/circleci-trigger.yml
@@ -11,10 +11,7 @@ jobs:
     steps:
       - name: Trigger CircleCI pipeline
         run: |
-          curl -X POST https://circleci.com/api/v2/project/gh/arsalanshaikh13/Parallax-Provider-Tutorial/pipeline \
-          --header 'Circle-Token: ${CIRCLE_TOKEN}' \
-          --header 'Content-Type: application/json' \
-          --data '{"branch": "circleci"}'
+          curl -X POST "${CIRCLE_WEBHOOK_URL}"
 
         env:
-          CIRCLECI_TOKEN: ${{ secrets.CIRCLECI_TOKEN }}
+          CIRCLECI_WEBHOOK_URL: ${{ secrets.CIRCLECI_WEBHOOK_URL }}
