--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parallaxturtlelib",
+  "name": "parallax-provider-tutorial",
   "version": "1.0.1",
   "main": "dist/parallax-provider.cjs.js",
   "module": "dist/parallax-provider.esm.js",
