--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,5 +42,5 @@ release:
     - npm config set //registry.npmjs.org/:_authToken=$NPM_TOKEN
     - npm publish
   rules:
-    - if: '$CI_COMMIT_TAG =~ /^v[0-9]+.*$/'
+    - if: '$CI_COMMIT_TAG =~ /^v[0-9]+\.[0-9]+\.[0-9]-gitlabci\.[0-9]+$/'
       when: always
