--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ lint_and_test:
     - yarn test
 
   rules:
-    - if: '$CI_COMMIT_BRANCH == "gitlabci"'
+    - if: '$CI_COMMIT_BRANCH == "gitlabci" && $CI_PIPELINE_SOURCE == "web"'
       when: always
 
 build:
@@ -33,14 +33,16 @@ build:
     paths:
       - dist/
   rules:
-    - if: '$CI_COMMIT_BRANCH == "gitlabci"'
+    - if: '$CI_COMMIT_BRANCH == "gitlabci" && $CI_PIPELINE_SOURCE == "web"'
       when: always
 
 release:
   stage: release
   script:
-    - npm config set //registry.npmjs.org/:_authToken=$NPM_TOKEN
+    - echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
     - npm publish
   rules:
-    - if: '$CI_COMMIT_TAG =~ /^v[0-9]+\.[0-9]+\.[0-9]-gitlabci\.[0-9]+$/'
+    - if:
+        '$CI_COMMIT_TAG =~ /^v[0-9]+\.[0-9]+\.[0-9]-gitlabci\.[0-9]+$/ &&
+        $CI_PIPELINE_SOURCE == "web"'
       when: always
