--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ lint_and_test:
     - yarn test
 
   rules:
-    - if: '$CI_COMMIT_BRANCH == "gitlabci" && $CI_PIPELINE_SOURCE == "web"'
+    - if: '$CI_COMMIT_BRANCH == "gitlabci" && $CI_PIPELINE_SOURCE == "api"'
       when: always
 
 build:
@@ -33,7 +33,7 @@ build:
     paths:
       - dist/
   rules:
-    - if: '$CI_COMMIT_BRANCH == "gitlabci" && $CI_PIPELINE_SOURCE == "web"'
+    - if: '$CI_COMMIT_BRANCH == "gitlabci" && $CI_PIPELINE_SOURCE == "api"'
       when: always
 
 release:
@@ -44,5 +44,5 @@ release:
   rules:
     - if:
         '$CI_COMMIT_TAG =~ /^v[0-9]+\.[0-9]+\.[0-9]-gitlabci\.[0-9]+$/ &&
-        $CI_PIPELINE_SOURCE == "web"'
+        $CI_PIPELINE_SOURCE == "api"'
       when: always
