--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,10 +42,13 @@ release:
   stage: release
   script:
     - echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN"
+    - rm -f ~/.npmrc
     - echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
+    - npm whoami
+
     - echo "Publishing version -> $(node -p
       "require('./package.json').version")" # print package version before publishing
-    - npm publish
+    - npm publish --dry-run
   rules:
     - if: '$CI_COMMIT_TAG =~ /^v[0-9]+\.[0-9]+\.[0-9]-gitlabci\.[0-9]+$/'
       when: always
