--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,14 +41,10 @@ build:
 release:
   stage: release
   script:
-    - echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN"
-    - rm -f ~/.npmrc
     - echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
-    - npm whoami
-
     - echo "Publishing version -> $(node -p
       "require('./package.json').version")" # print package version before publishing
-    - npm publish --dry-run
+    - npm publish
   rules:
     - if: '$CI_COMMIT_TAG =~ /^v[0-9]+\.[0-9]+\.[0-9]-gitlabci\.[0-9]+$/'
       when: always
