added anchors in circleci config yml file for repeating tags, added condition based logic for webhook trigger on tags or branch using githubref context from github, change name of library in packagage json and added main,module,browser filename in package json, added .npmignore file to avoid file checkout on pubslish

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,11 @@ executors:
     docker:
       - image: cimg/node:18.20
 
+anchors:
+  tag_filter: &tag_filter
+    tags:
+      only: /^v\d+\.\d+\.\d+-circleci\.\d+$/
+
 jobs:
   install:
     executor: node_executor
@@ -68,6 +73,7 @@ workflows:
             branches:
               only:
                 - circleci
+            <<: *tag_filter
       - build:
           requires:
             - lint_and_test
@@ -75,14 +81,13 @@ workflows:
             branches:
               only:
                 - circleci
+            <<: *tag_filter
 
       - publish:
           requires:
             - build
 
           filters:
-            tags:
-              only: /^v[0-9]+.*$/
-
+            <<: *tag_filter
             branches:
               ignore: /.*/
