added https in .npmrc and append >> in echo command in config.yml file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -64,7 +64,7 @@ jobs:
           name: Authenticate with npm
           command: |
             # Use the NPM_TOKEN environment variable for authentication
-            echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
+            echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" >> ~/.npmrc
       - run: npm publish
 
 # Consolidate workflows into a single, filtered workflow
