--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "parallaxturtlelibcircle",
-  "version": "1.0.0",
+  "version": "1.0.1-circleci.0",
   "main": "dist/parallax-provider.cjs.js",
   "module": "dist/parallax-provider.esm.js",
   "browser": "dist/parallax-provider.umd.js",
