--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.1-gitlabci.3",
   "main": "dist/parallax-provider.cjs.js",
   "module": "dist/parallax-provider.esm.js",
-  "browser": "dist/parallax-provider.umd.js",
+  "exports": {
+    "import": "./dist/parallax-provider.esm.js",
+    "require": "./dist/parallax-provider.cjs.js",
+    "browser": "./dist/parallax-provider.umd.js"
+  },
   "license": "MIT",
   "scripts": {
     "build": " yarn clean && rollup -c",
