updated gitlab-ci.yml by addding needs step inside stages to block the CI when the preceding stage fails ex if lint/test fails stop CI , run build only when lint/test passes, updated .babelrc to target current node version for transpilation, updated jest.config.mjs by enabling module file extension to search for mjs files extension during test

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,8 @@ build:
   script:
     - yarn build
     - echo 'CI_COMMIT_TAG value -> "$CI_COMMIT_TAG"'
+  needs:
+    - test
   artifacts:
     paths:
       - dist/
@@ -45,6 +47,8 @@ release:
     - echo "Publishing version -> $(node -p
       "require('./package.json').version")" # print package version before publishing
     - npm publish
+  needs:
+    - build
   rules:
     - if: '$CI_COMMIT_TAG =~ /^v[0-9]+\.[0-9]+\.[0-9]-gitlabci\.[0-9]+$/'
       when: always
