--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ build:
     - yarn build
     - echo 'CI_COMMIT_TAG value -> "$CI_COMMIT_TAG"'
   needs:
-    - test
+    - lint_and_test
   artifacts:
     paths:
       - dist/
