--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,4 +51,4 @@ release:
     - build
   rules:
     - if: '$CI_COMMIT_TAG =~ /^v[0-9]+\.[0-9]+\.[0-9]-gitlabci\.[0-9]+$/'
-      when: always
+      when: on_success
