put the extension changes inside if condtion block inside workflow rules to check for if condtion and file extension before starting pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,15 +4,17 @@ image: node:18-alpine
 # set workflow rules for all the stages, exit the workflow if rules don't match
 workflow:
   rules:
-    - changes:
+    # run pipeline on branch push, tag push and only through api source
+    # and avoid double pipeline trigger one through api source and other through gitlab username source
+    - if:
+        '($CI_COMMIT_BRANCH == "gitlabci" || $CI_COMMIT_TAG) &&
+        $CI_PIPELINE_SOURCE == "api"'
+      # and also check for changes in the file extension to run the pipeline and in
+      changes:
         - '**.js'
         - '**.json'
         - '**.*rc'
         - '**.yml'
-    # run pipeline on branch push, tag push and only through api source
-    - if:
-        '($CI_COMMIT_BRANCH == "gitlabci" || $CI_COMMIT_TAG) &&
-        $CI_PIPELINE_SOURCE == "api"'
       when: always
     - when: never # do not run pipeline on any other condition
 
