--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,15 @@ on:
   push:
     branches:
       - main
+      # https://docs.github.com/en/actions/reference/workflows-and-actions/events-that-trigger-workflows
+      # paths and branches work together
+      # this filter ensures pipeline will run only on changes to this files only
+      # ignoring changes to readme,coverage files or even empty commits
+    paths:
+      - '**.js'
+      - '**.json'
+      - '**.*rc'
+      - '**.yml'
       # git does not take regex patterns but takes glob patterns
       # https://docs.github.com/en/actions/reference/workflows-and-actions/workflow-syntax#filter-pattern-cheat-sheet
     tags:
