--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,102 +1,25 @@
+# this is the main setup file for dynamic configuration
 version: 2.1
 
-# Define reusable executor
-executors:
-  node_executor:
-    docker:
-      # - image: cimg/node:18.20
-      # updated: using the lightweight 'node:18-alpine' image for faster download in ci setup and faster pipelines
-      - image: node:18-alpine
+#this is the required directive to enable dynamic configuration
+setup: true
 
-anchors:
-  tag_filter: &tag_filter
-    tags:
-      only: /^v\d+\.\d+\.\d+-circleci\.\d+$/ # Updated regex to match the corrected tag format
-  branch_filter: &branch_filter
-    branches:
-      only: circleci
+# Use the path-filtering orb to check for changed files
+orbs:
+  path-filtering: circleci/path-filtering@1.0.0
 
-# Define all the jobs
-jobs:
-  install:
-    executor: node_executor
-    steps:
-      - checkout
-      - restore_cache:
-          keys:
-            - yarn-deps-{{ checksum "yarn.lock" }}
-      #updated: install git and yarn. Alpine based images are very minimal and
-      # may not have git or yarn pre-installed
-      - run: apk add --no-cache git
-      - run: yarn install
-      - save_cache:
-          paths:
-            - node_modules
-          key: yarn-deps-{{ checksum "yarn.lock" }}
-      - persist_to_workspace:
-          root: .
-          paths:
-            - node_modules
-
-  lint_and_test:
-    executor: node_executor
-    steps:
-      - checkout
-      - attach_workspace:
-          at: .
-      - run: yarn lint
-      - run: yarn test
-
-  build:
-    executor: node_executor
-    steps:
-      - checkout
-      - attach_workspace:
-          at: .
-      - run: yarn build
-      - persist_to_workspace:
-          root: .
-          paths:
-            - dist
-
-  publish:
-    executor: node_executor
-    steps:
-      - checkout
-      - attach_workspace:
-          at: .
-      - run:
-          name: Authenticate with npm
-          command: |
-            # Use the NPM_TOKEN environment variable for authentication
-            echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" >> ~/.npmrc
-      - run: npm publish
-
-# Consolidate workflows into a single, filtered workflow
+# the setup workflow that runs first on everypipeline
 workflows:
-  version: 2.1
-  build_and_release:
+  path-filtering-setup:
     jobs:
-      - install:
-          filters:
-            <<: *branch_filter
-            <<: *tag_filter
-      - lint_and_test:
-          requires:
-            - install
-          filters:
-            <<: *branch_filter
-            <<: *tag_filter
-      - build:
-          requires:
-            - lint_and_test
-          filters:
-            <<: *branch_filter
-            <<: *tag_filter
-      - publish:
-          requires:
-            - build
-          filters:
-            branches:
-              ignore: /.*/ # Ignore all branches
-            <<: *tag_filter
+      - path-filtering/filter:
+          # Use this pipeline variable to compare against the previous commit
+          # on the current branch that triggered the pipeline
+          base-revision: << pipeline.git.base_revision >>
+          # this is the path to the second configuration file to run
+          config-path: .circleci/config_continue.yml
+          # Define the mapping of regex patterns to pipeline parameters
+          mapping:
+            # Trigger the build_and_release workflow for this file extenisons
+            # this regex will match any .js, .json, .yml, or .rc
+            (.*\.(js|json|yml)$)|(\..*rc$) run-build-and-release true
