--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ workflows:
       - path-filtering/filter:
           # Use this pipeline variable to compare against the previous commit
           # on the current branch that triggered the pipeline
-          base-revision: << pipeline.git.base_revision >>
+          base-revision: circleci
           # this is the path to the second configuration file to run
           config-path: .circleci/config_continue.yml
           # Define the mapping of regex patterns to pipeline parameters
