--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,8 @@ workflows:
       - path-filtering/filter:
           # Use this pipeline variable to compare against the previous commit
           # on the current branch that triggered the pipeline
-          base-revision: circleci
+
+          base-revision: << pipeline.git.branch >>
           # this is the path to the second configuration file to run
           config-path: .circleci/config_continue.yml
           # Define the mapping of regex patterns to pipeline parameters
@@ -23,3 +24,6 @@ workflows:
             # Trigger the build_and_release workflow for this file extenisons
             # this regex will match any .js, .json, .yml, or .rc
             (.*\.(js|json|yml)$)|(\..*rc$) run-build-and-release true
+          filters:
+            tags:
+              only: /^v\d+\.\d+\.\d+-circleci\.\d+$/
