--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ workflows:
           # Use this pipeline variable to compare against the previous commit
           # on the current branch that triggered the pipeline
 
-          base-revision: << pipeline.git.branch >>
+          base-revision: circleci
           # this is the path to the second configuration file to run
           config-path: .circleci/config_continue.yml
           # Define the mapping of regex patterns to pipeline parameters
