added comment in config file for filters and add when condition inside workflows

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,8 @@ workflows:
             # Trigger the build_and_release workflow for this file extenisons
             # this regex will match any .js, .json, .yml, or .rc
             (.*\.(js|json|yml)$)|(\..*rc$) run-build-and-release true
+          # by default path-filter always works for branches so no need for mentioning filter branch
+          # filters is only required for tag push
           filters:
             tags:
               only: /^v\d+\.\d+\.\d+-circleci\.\d+$/
