add when condition inside workflows build_and_release

--- a/.circleci/config_continue.yml
+++ b/.circleci/config_continue.yml
@@ -81,8 +81,9 @@ jobs:
 # Consolidate workflows into a single, filtered workflow
 workflows:
   version: 2.1
-  when: << pipeline.parameters.run-build-and-release >>
   build_and_release:
+    when:
+      condition: << pipeline.parameters.run-build-and-release >>
     jobs:
       - install:
           filters:
