--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,12 +37,32 @@ default:
     - yarn install
 
 stages:
+  - check
   - test
   - build
   - release
 
+# This job explicitly checks for file changes and fails if none found
+check_for_changes:
+  stage: check
+  rules:
+    - if: |
+        ($CI_COMMIT_BRANCH == "gitlabci" || $CI_COMMIT_TAG) &&
+        $CI_PIPELINE_SOURCE == "api"
+  script:
+    - |
+      set -e  # Exit on any error
+      set -x  # Print commands as they execute
+
+      CHANGED=$(git diff --name-only $CI_COMMIT_BEFORE_SHA $CI_COMMIT_SHA | grep -E '\.js$|\.json$|\.yml$|\..*rc$')
+      if [ -z "$CHANGED" ]; then
+        echo "No relevant changes found. Stopping pipeline."
+        exit 1
+      fi
+      echo "Found relevant changes: $CHANGED"
 lint_and_test:
   stage: test
+  needs: check
   rules:
     # run pipeline on branch push, tag push and only through api source
     # and avoid double pipeline trigger one through api source and other through gitlab username source
