added installation script for git in before_script to run git diff in check_for_changes

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,7 @@ default:
     # - corepack disable # prevent auto Yarn v4 activation
     # npm install is not need since installed yarn version in node:18-alpine is 1.22.22
     # - npm install -g yarn@1.22.22
+    - apk add --no-cache git
     - yarn install
 
 stages:
