--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,6 +55,12 @@ check_for_changes:
       set -e  # Exit on any error
       set -x  # Print commands as they execute
 
+      git log --oneline -n 20
+      echo "CI_COMMIT_SHA: $CI_COMMIT_SHA"
+      echo "CI_COMMIT_BEFORE_SHA: $CI_COMMIT_BEFORE_SHA"
+      git rev-parse $CI_COMMIT_BEFORE_SHA || echo "Before SHA not found!"
+      SHOW=$(git show --name-only $CI_COMMIT_SHA | grep -E '\.js$|\.json$|\.yml$|\..*rc$')
+      echo "$SHOW this is  the diff"
       CHANGED=$(git diff --name-only $CI_COMMIT_BEFORE_SHA $CI_COMMIT_SHA | grep -E '\.js$|\.json$|\.yml$|\..*rc$')
       if [ -z "$CHANGED" ]; then
         echo "No relevant changes found. Stopping pipeline."
