--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,20 +2,20 @@
 image: node:18-alpine
 
 # set workflow rules for all the stages, exit the workflow if rules don't match
-.default-rules: &default-rules
-  rules:
-    # run pipeline on branch push, tag push and only through api source
-    # and avoid double pipeline trigger one through api source and other through gitlab username source
-    - if:
-        '($CI_COMMIT_BRANCH == "gitlabci" || $CI_COMMIT_TAG) &&
-        $CI_PIPELINE_SOURCE == "api"'
-      # check for changes in the file extension to run the pipeline
-      changes:
-        - '**.js'
-        - '**.json'
-        - '**.*rc'
-        - '**.yml'
-    - when: never # do not run pipeline on any other condition
+# .default-rules: &default-rules
+#   rules:
+#     # run pipeline on branch push, tag push and only through api source
+#     # and avoid double pipeline trigger one through api source and other through gitlab username source
+#     - if:
+#         '($CI_COMMIT_BRANCH == "gitlabci" || $CI_COMMIT_TAG) &&
+#         $CI_PIPELINE_SOURCE == "api"'
+#       # check for changes in the file extension to run the pipeline
+#       changes:
+#         - '**.js'
+#         - '**.json'
+#         - '**.*rc'
+#         - '**.yml'
+#     - when: never # do not run pipeline on any other condition
 
 default:
   # global cache for node_modules directory
@@ -30,12 +30,11 @@ default:
 
   # run yarn install automatically at start of every job,
   # the cache will make this process nearly instantaneous after the first run
-  before_script:
-    # - corepack disable # prevent auto Yarn v4 activation
-    # npm install is not need since installed yarn version in node:18-alpine is 1.22.22
-    # - npm install -g yarn@1.22.22
-    - apk add --no-cache git
-    - yarn install
+  # before_script:
+  #   # - corepack disable # prevent auto Yarn v4 activation
+  #   # npm install is not need since installed yarn version in node:18-alpine is 1.22.22
+  #   # - npm install -g yarn@1.22.22
+  #   - yarn install
 
 stages:
   - check
@@ -44,21 +43,22 @@ stages:
   - release
 
 # This job explicitly checks for file changes and fails if none found
-check_for_changes:
+check_for_condition:
   stage: check
   rules:
     - if: |
         ($CI_COMMIT_BRANCH == "gitlabci" || $CI_COMMIT_TAG) &&
         $CI_PIPELINE_SOURCE == "api"
   script:
+    - apk add --no-cache git # since we are using git command in the script so install git here
     - |
       set +e # gitlabci exits immediately by default due set -e so reverse the exit condition here to capture error
-      set -x  # Print commands as they execute
+      # set -x  # Print commands as they execute
 
-      git log --oneline -n 20
-      echo "CI_COMMIT_SHA: $CI_COMMIT_SHA"
-      echo "CI_COMMIT_BEFORE_SHA: $CI_COMMIT_BEFORE_SHA"
-      git rev-parse $CI_COMMIT_BEFORE_SHA || echo "Before SHA not found!"
+      # git log --oneline -n 20
+      # echo "CI_COMMIT_SHA: $CI_COMMIT_SHA"
+      # echo "CI_COMMIT_BEFORE_SHA: $CI_COMMIT_BEFORE_SHA"
+      # git rev-parse $CI_COMMIT_BEFORE_SHA || echo "Before SHA not found!"
 
       if [ "$CI_COMMIT_BEFORE_SHA" = "0000000000000000000000000000000000000000" ] ||
           ! git rev-parse "$CI_COMMIT_BEFORE_SHA" >/dev/null 2>&1; then
@@ -76,39 +76,15 @@ lint_and_test:
   stage: test
   needs:
     - check_for_changes
-  rules:
-    # run pipeline on branch push, tag push and only through api source
-    # and avoid double pipeline trigger one through api source and other through gitlab username source
-    - if:
-        '($CI_COMMIT_BRANCH == "gitlabci" || $CI_COMMIT_TAG) &&
-        $CI_PIPELINE_SOURCE == "api"'
-      # check for changes in the file extension to run the pipeline
-      changes:
-        - '**.js'
-        - '**.json'
-        - '**.*rc'
-        - '**.yml'
-    - when: never # do not run pipeline on any other condition
   script:
+    - yarn install
     - yarn lint
     - yarn test
 
 build:
   stage: build
-  rules:
-    # run pipeline on branch push, tag push and only through api source
-    # and avoid double pipeline trigger one through api source and other through gitlab username source
-    - if:
-        '($CI_COMMIT_BRANCH == "gitlabci" || $CI_COMMIT_TAG) &&
-        $CI_PIPELINE_SOURCE == "api"'
-      # check for changes in the file extension to run the pipeline
-      changes:
-        - '**.js'
-        - '**.json'
-        - '**.*rc'
-        - '**.yml'
-    - when: never # do not run pipeline on any other condition
   script:
+    - yarn install
     - yarn build
   needs:
     - lint_and_test
